# mikasa-codex

./: .gitignore  Architecture.md  CHANGELOG.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/bootstrap/: __init__.py  config.py  container.py  logging_config.py
app/domain/: interfaces.py
app/engine/: engine.py  event_bus.py  events.py
app/infra/: __init__.py
app/infra/db/: migration_manager.py  sqlite_db.py
app/infra/db/migrations/: 001_core_down.sql  001_core_up.sql  002_preferences_up.sql
app/infra/llm/: mock_client.py  real_client.py
app/infra/tts/: null_tts.py
app/modules/patients/: __init__.py
app/tests/: test_event_bus.py  test_migrations.py
app/tools/: migrate.py  rollback.py
app/ui/: __init__.py  main_window.py  theme.py  widget_registry.py
app/ui/presenters/: chat_presenter.py
config/: default.toml
