[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mikasa-codex"
version = "0.1.0"
description = "Modular desktop AI assistant"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "pydantic>=2.0",
    "pytest>=8.0",
    "tomli>=2.0; python_version < '3.11'"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
